--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -2,13 +2,13 @@
   <div class="container__small-card-content">
     <div class="small-card__photo">
       <img
-      src="https://miro.medium.com/v2/resize:fit:828/format:webp/1*bMgQ8MhbnQexpqHgIgBJPA.png"
+      src="{{ photoCover }}"
       alt=""
       >
     </div>
 
     <div class="small-card__title">
-      <h1><a href="#">Saiu a nova versão do Angular!!!</a></h1>
+      <h1><a href="#">{{ cardTitle }}</a></h1>
     </div>
   </div>
 
