Adicionado dinamicidade ao content

--- a/src/app/components/big-card/big-card.component.css
+++ b/src/app/components/big-card/big-card.component.css
@@ -21,6 +21,8 @@
 }
 
 .big-card__photo img{
-  width: 100%;
-  min-width: 590px;
+  display: flex;
+  align-items: center;
+  width: 80%;
+  min-width: 490px;
 }
