--- a/src/app/components/menu-title/menu-title.component.css
+++ b/src/app/components/menu-title/menu-title.component.css
@@ -4,7 +4,7 @@
 }
 
 .container__menu-title h1{
-  margin: 15px 0 15px 0;
+  margin-bottom: 15px;
   font-size: 140px;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   display: flex;
